--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,6 @@
 @import "pages/about";
 @import "pages/career";
 @import "pages/location";
-
+@import "vendors/normalize";
 @import "themes/theme";
 @import "themes/admin";
