--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -148,6 +148,7 @@
     div {
       position: absolute;
       border: 15px solid #e5ecf4;
+      background-color: #e5ecf4;
       width: 200%;
       z-index: -2;
       top: 3.35rem;
@@ -229,7 +230,7 @@
       position: absolute;
       z-index: 11;
       bottom: 0rem;
-      right: -13rem;
+      right: -17rem;
     }
     .img {
       position: relative;
