--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -32,6 +32,7 @@ h1 {
   line-height: $h1-lineHight;
   letter-spacing: $h1-letterSpacing;
   font-family: $main-font;
+  color: $darkNavy;
   @include responsive(phone) {
     font-size: 4rem;
   }
@@ -41,6 +42,7 @@ h2 {
   font-size: $h2-size;
   line-height: $h2-lineHight;
   letter-spacing: $h2-letterSpacing;
+  color: $darkNavy;
   @include responsive(phone) {
     font-size: 3.2rem;
   }
@@ -51,12 +53,14 @@ h3 {
   font-size: $h3-size;
   line-height: $h3-lineHight;
   letter-spacing: $h3-letterSpacing;
+  color: $darkNavy;
 }
 h4 {
   font-family: $main-font;
   font-size: $h4-size;
   line-height: $h4-lineHight;
   letter-spacing: $h4-letterSpacing;
+  color: $darkNavy;
   @include responsive(m-phone) {
     font-size: 2rem;
     line-height: 2.8rem;
