--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -61,6 +61,12 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
     gap: 3rem;
+    div {
+      font-weight: 700;
+      color: $darkNavy;
+      font-size: $h4-size;
+      line-height: $h1-lineHight;
+    }
     @include responsive(table) {
       gap: 12rem;
       grid-template-columns: repeat(auto-fit, minmax(31.1rem, 45.7rem));
