--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,7 @@ h4 {
   background: linear-gradient(rgba(47, 59, 89, 0.6705882353), rgba(47, 59, 89, 0.7921568627)), url(../images/jpg/hero-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   margin-bottom: 16rem;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
@@ -382,7 +383,7 @@ h4 {
 .hero .desig-li {
   position: absolute;
   left: -16.5rem;
-  top: 20rem;
+  top: 11rem;
 }
 @media only screen and (max-width: 890px) {
   .hero .desig-li {
@@ -392,7 +393,7 @@ h4 {
 .hero .desig-ar {
   position: absolute;
   max-width: 44.7rem;
-  top: 20.2rem;
+  top: 11.2rem;
   height: 10rem;
   right: 13rem;
 }
@@ -954,6 +955,15 @@ h4 {
   }
 }
 
+.carer-container {
+  background: linear-gradient(rgba(47, 59, 89, 0.6705882353), rgba(47, 59, 89, 0.7921568627)), url(../images/jpg/career-bg.jpg);
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+  .carer-container {
+    background: linear-gradient(rgba(47, 59, 89, 0.6705882353), rgba(47, 59, 89, 0.7921568627)), url(../images/jpg/career-bg@2x.jpg);
+  }
+}
+
 .map {
   margin-bottom: 12rem;
 }
@@ -987,9 +997,12 @@ h4 {
 .map__wrapper {
   display: none;
 }
-.map__wrapper div {
+.map__wrapper div a {
+  margin-right: auto;
+  margin-left: auto;
+  justify-content: center;
+  color: #495567;
   background: rgba(252, 183, 43, 0.15);
-  text-align: center;
   max-width: 31.1rem;
   padding: 2.2rem;
 }
@@ -1082,10 +1095,6 @@ main {
    * Correct the font size and margin on `h1` elements within `section` and
    * `article` contexts in Chrome, Firefox, and Safari.
    */
-h1 {
-  font-size: 2em;
-}
-
 /* Grouping content
      ========================================================================== */
 /**
