--- a/sass/pages/_location.scss
+++ b/sass/pages/_location.scss
@@ -23,10 +23,15 @@
   &__wrapper {
     display: none;
     div {
-      background: rgba(252, 183, 43, 0.15);
-      text-align: center;
-      max-width: 31.1rem;
-      padding: 2.2rem;
+      a {
+        margin-right: auto;
+        margin-left: auto;
+        justify-content: center;
+        color: $darkNavy;
+        background: rgba(252, 183, 43, 0.15);
+        max-width: 31.1rem;
+        padding: 2.2rem;
+      }
       &:not(:last-child) {
         margin-bottom: 1.6rem;
       }
