--- a/sass/pages/_location.scss
+++ b/sass/pages/_location.scss
@@ -27,6 +27,9 @@
         margin-right: auto;
         margin-left: auto;
         justify-content: center;
+        font-size: $h4-size;
+        line-height: $h4-lineHight;
+        font-weight: 700;
         color: $darkNavy;
         background: rgba(252, 183, 43, 0.15);
         max-width: 31.1rem;
