--- a/css/main.css
+++ b/css/main.css
@@ -1001,6 +1001,9 @@ h4 {
   margin-right: auto;
   margin-left: auto;
   justify-content: center;
+  font-size: 24px;
+  line-height: 1.17;
+  font-weight: 700;
   color: #495567;
   background: rgba(252, 183, 43, 0.15);
   max-width: 31.1rem;
