--- a/sass/pages/_location.scss
+++ b/sass/pages/_location.scss
@@ -1,23 +1,12 @@
 .map {
   margin-bottom: 12rem;
   &__container {
-    background-image: url(../images/svg/map-bg.svg);
-    height: 54.3rem;
-    background-position: center;
-    background-size: cover;
-    margin-bottom: 4rem;
-
-    @include responsive(s-desktop) {
-      height: 50rem;
+    max-width: 111rem;
+    .phon {
+      display: none;
     }
-    @include responsive(l-table) {
-      height: 40rem;
-    }
-    @include responsive(table) {
-      height: 33.7rem;
-    }
-    @include responsive(l-phone) {
-      height: 25.7rem;
+    .desk {
+      width: 100%;
     }
   }
   &__wrapper {
@@ -42,8 +31,15 @@
   }
   @include responsive(phone) {
     &__container {
-      height: 20.3rem;
-      background-image: url(../images/svg/map-ph.svg);
+      max-width: 111rem;
+      .phon {
+        width: 100%;
+        display: block;
+      }
+      .desk {
+        display: none;
+      }
+      margin-bottom: 4rem;
     }
     &__wrapper {
       display: block;
