--- a/sass/pages/_career.scss
+++ b/sass/pages/_career.scss
@@ -52,6 +52,6 @@
     only screen and (min-resolution: 192dpi),
     only screen and (min-resolution: 2dppx) {
     background: linear-gradient(#2f3b59ab, #2f3b59ca),
-      url(../images/jpg/career-bg@2x.jpg);
+      url(../images/jpg/career-bg@2x.png);
   }
 }
