--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,11 @@ html {
   height: 100%;
   scroll-behavior: smooth;
 }
+@media only screen and (max-width: 390px) {
+  html {
+    font-size: 50%;
+  }
+}
 
 body {
   height: 100%;
@@ -732,6 +737,9 @@ h4 {
   position: relative;
   overflow: hidden;
   background: linear-gradient(rgba(47, 59, 89, 0.75), rgba(47, 59, 89, 0.75)), url(../images/jpg/about-hero.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   margin-bottom: 12rem;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
@@ -956,7 +964,7 @@ h4 {
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
   .carer-container {
-    background: linear-gradient(rgba(47, 59, 89, 0.6705882353), rgba(47, 59, 89, 0.7921568627)), url(../images/jpg/career-bg@2x.jpg);
+    background: linear-gradient(rgba(47, 59, 89, 0.6705882353), rgba(47, 59, 89, 0.7921568627)), url(../images/jpg/career-bg@2x.png);
   }
 }
 
