--- a/css/main.css
+++ b/css/main.css
@@ -324,6 +324,8 @@ h4 {
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
   .hero {
     background: linear-gradient(rgba(47, 59, 89, 0.6705882353), rgba(47, 59, 89, 0.7921568627)), url(../images/jpg/hero-bg@2x.jpg);
+    background-size: cover;
+    background-position: center;
   }
 }
 .hero__wrapper {
@@ -741,6 +743,8 @@ h4 {
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
   .hero-top {
     background: linear-gradient(rgba(47, 59, 89, 0.6705882353), rgba(47, 59, 89, 0.7921568627)), url(../images/jpg/about-hero@2x.jpg);
+    background-size: cover;
+    background-position: center;
   }
 }
 .hero-top h1 {
@@ -957,10 +961,14 @@ h4 {
 
 .carer-container {
   background: linear-gradient(rgba(47, 59, 89, 0.6705882353), rgba(47, 59, 89, 0.7921568627)), url(../images/jpg/career-bg.jpg);
+  background-size: cover;
+  background-position: center;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
   .carer-container {
     background: linear-gradient(rgba(47, 59, 89, 0.6705882353), rgba(47, 59, 89, 0.7921568627)), url(../images/jpg/career-bg@2x.png);
+    background-size: cover;
+    background-position: center;
   }
 }
 
