--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -15,6 +15,8 @@
     only screen and (min-resolution: 2dppx) {
     background: linear-gradient(#2f3b59ab, #2f3b59ca),
       url(../images/jpg/about-hero@2x.jpg);
+    background-size: cover;
+    background-position: center;
   }
   h1 {
     color: #ffffff;
