--- a/css/main.css
+++ b/css/main.css
@@ -966,7 +966,7 @@ h4 {
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
   .carer-container {
-    background: linear-gradient(rgba(47, 59, 89, 0.6705882353), rgba(47, 59, 89, 0.7921568627)), url(../images/jpg/career-bg@2x.png);
+    background: linear-gradient(rgba(47, 59, 89, 0.6705882353), rgba(47, 59, 89, 0.7921568627)), url(../images/jpg/caree-bgr@2x.png);
     background-size: cover;
     background-position: center;
   }
