--- a/sass/pages/_career.scss
+++ b/sass/pages/_career.scss
@@ -54,7 +54,7 @@
     only screen and (min-resolution: 192dpi),
     only screen and (min-resolution: 2dppx) {
     background: linear-gradient(#2f3b59ab, #2f3b59ca),
-      url(../images/jpg/career-bg@2x.png);
+      url(../images/jpg/caree-bgr@2x.png);
     background-size: cover;
     background-position: center;
   }
